Grammar/GramaticaParser.py
# Generated from Gramatica.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class GramaticaParser ( Parser ):

    grammarFileName = "Gramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [  ]

    symbolicNames = [ "<INVALID>", "REG", "INSTR_R", "INSTR_I", "INSTR_J", 
                      "LABEL", "DIGIT", "COLON", "COMMA", "WHITESPACE", 
                      "PAREN_OPEN", "PAREN_CLOSE", "NEWLINE" ]

    RULE_gramatica = 0
    RULE_line = 1
    RULE_instruccion_r = 2
    RULE_instruccion_i = 3
    RULE_instruccion_j = 4
    RULE_ra = 5
    RULE_rb = 6
    RULE_rc = 7
    RULE_inm = 8

    ruleNames =  [ "gramatica", "line", "instruccion_r", "instruccion_i", 
                   "instruccion_j", "ra", "rb", "rc", "inm" ]

    EOF = Token.EOF
    REG=1
    INSTR_R=2
    INSTR_I=3
    INSTR_J=4
    LABEL=5
    DIGIT=6
    COLON=7
    COMMA=8
    WHITESPACE=9
    PAREN_OPEN=10
    PAREN_CLOSE=11
    NEWLINE=12

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class GramaticaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GramaticaParser.EOF, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.LineContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.LineContext,i)


        def getRuleIndex(self):
            return GramaticaParser.RULE_gramatica

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGramatica" ):
                listener.enterGramatica(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGramatica" ):
                listener.exitGramatica(self)




    def gramatica(self):

        localctx = GramaticaParser.GramaticaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_gramatica)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 18
                self.line()
                self.state = 21 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GramaticaParser.INSTR_R) | (1 << GramaticaParser.INSTR_I) | (1 << GramaticaParser.INSTR_J) | (1 << GramaticaParser.LABEL))) != 0)):
                    break

            self.state = 23
            self.match(GramaticaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(GramaticaParser.NEWLINE, 0)

        def instruccion_r(self):
            return self.getTypedRuleContext(GramaticaParser.Instruccion_rContext,0)


        def ra(self):
            return self.getTypedRuleContext(GramaticaParser.RaContext,0)


        def rb(self):
            return self.getTypedRuleContext(GramaticaParser.RbContext,0)


        def COMMA(self):
            return self.getToken(GramaticaParser.COMMA, 0)

        def WHITESPACE(self):
            return self.getToken(GramaticaParser.WHITESPACE, 0)

        def rc(self):
            return self.getTypedRuleContext(GramaticaParser.RcContext,0)


        def instruccion_i(self):
            return self.getTypedRuleContext(GramaticaParser.Instruccion_iContext,0)


        def inm(self):
            return self.getTypedRuleContext(GramaticaParser.InmContext,0)


        def instruccion_j(self):
            return self.getTypedRuleContext(GramaticaParser.Instruccion_jContext,0)


        def LABEL(self):
            return self.getToken(GramaticaParser.LABEL, 0)

        def COLON(self):
            return self.getToken(GramaticaParser.COLON, 0)

        def DIGIT(self):
            return self.getToken(GramaticaParser.DIGIT, 0)

        def getRuleIndex(self):
            return GramaticaParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)




    def line(self):

        localctx = GramaticaParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 25
                self.instruccion_r()
                self.state = 26
                self.ra()
                self.state = 27
                self.rb()
                self.state = 28
                self.match(GramaticaParser.COMMA)
                self.state = 29
                self.match(GramaticaParser.WHITESPACE)
                self.state = 30
                self.rc()
                pass

            elif la_ == 2:
                self.state = 32
                self.instruccion_r()
                self.state = 33
                self.ra()
                self.state = 34
                self.rb()
                pass

            elif la_ == 3:
                self.state = 36
                self.instruccion_i()
                self.state = 37
                self.ra()
                self.state = 38
                self.rb()
                self.state = 39
                self.match(GramaticaParser.COMMA)
                self.state = 40
                self.match(GramaticaParser.WHITESPACE)
                self.state = 43
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [GramaticaParser.DIGIT, GramaticaParser.PAREN_OPEN]:
                    self.state = 41
                    self.inm()
                    pass
                elif token in [GramaticaParser.LABEL]:
                    self.state = 42
                    self.match(GramaticaParser.LABEL)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 4:
                self.state = 45
                self.instruccion_i()
                self.state = 46
                self.ra()
                self.state = 47
                self.inm()
                pass

            elif la_ == 5:
                self.state = 49
                self.instruccion_j()
                self.state = 50
                self.match(GramaticaParser.LABEL)
                pass

            elif la_ == 6:
                self.state = 52
                self.match(GramaticaParser.LABEL)
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GramaticaParser.DIGIT:
                    self.state = 53
                    self.match(GramaticaParser.DIGIT)


                self.state = 56
                self.match(GramaticaParser.COLON)
                pass


            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GramaticaParser.NEWLINE:
                self.state = 59
                self.match(GramaticaParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Instruccion_rContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSTR_R(self):
            return self.getToken(GramaticaParser.INSTR_R, 0)

        def WHITESPACE(self):
            return self.getToken(GramaticaParser.WHITESPACE, 0)

        def getRuleIndex(self):
            return GramaticaParser.RULE_instruccion_r

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion_r" ):
                listener.enterInstruccion_r(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion_r" ):
                listener.exitInstruccion_r(self)




    def instruccion_r(self):

        localctx = GramaticaParser.Instruccion_rContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruccion_r)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(GramaticaParser.INSTR_R)
            self.state = 63
            self.match(GramaticaParser.WHITESPACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Instruccion_iContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSTR_I(self):
            return self.getToken(GramaticaParser.INSTR_I, 0)

        def WHITESPACE(self):
            return self.getToken(GramaticaParser.WHITESPACE, 0)

        def getRuleIndex(self):
            return GramaticaParser.RULE_instruccion_i

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion_i" ):
                listener.enterInstruccion_i(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion_i" ):
                listener.exitInstruccion_i(self)




    def instruccion_i(self):

        localctx = GramaticaParser.Instruccion_iContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instruccion_i)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(GramaticaParser.INSTR_I)
            self.state = 66
            self.match(GramaticaParser.WHITESPACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Instruccion_jContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSTR_J(self):
            return self.getToken(GramaticaParser.INSTR_J, 0)

        def WHITESPACE(self):
            return self.getToken(GramaticaParser.WHITESPACE, 0)

        def getRuleIndex(self):
            return GramaticaParser.RULE_instruccion_j

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion_j" ):
                listener.enterInstruccion_j(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion_j" ):
                listener.exitInstruccion_j(self)




    def instruccion_j(self):

        localctx = GramaticaParser.Instruccion_jContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_instruccion_j)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(GramaticaParser.INSTR_J)
            self.state = 69
            self.match(GramaticaParser.WHITESPACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REG(self):
            return self.getToken(GramaticaParser.REG, 0)

        def COMMA(self):
            return self.getToken(GramaticaParser.COMMA, 0)

        def WHITESPACE(self):
            return self.getToken(GramaticaParser.WHITESPACE, 0)

        def getRuleIndex(self):
            return GramaticaParser.RULE_ra

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRa" ):
                listener.enterRa(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRa" ):
                listener.exitRa(self)




    def ra(self):

        localctx = GramaticaParser.RaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ra)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(GramaticaParser.REG)
            self.state = 72
            self.match(GramaticaParser.COMMA)
            self.state = 73
            self.match(GramaticaParser.WHITESPACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RbContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REG(self):
            return self.getToken(GramaticaParser.REG, 0)

        def getRuleIndex(self):
            return GramaticaParser.RULE_rb

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRb" ):
                listener.enterRb(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRb" ):
                listener.exitRb(self)




    def rb(self):

        localctx = GramaticaParser.RbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_rb)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(GramaticaParser.REG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RcContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REG(self):
            return self.getToken(GramaticaParser.REG, 0)

        def getRuleIndex(self):
            return GramaticaParser.RULE_rc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRc" ):
                listener.enterRc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRc" ):
                listener.exitRc(self)




    def rc(self):

        localctx = GramaticaParser.RcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_rc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(GramaticaParser.REG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PAREN_OPEN(self):
            return self.getToken(GramaticaParser.PAREN_OPEN, 0)

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(GramaticaParser.DIGIT)
            else:
                return self.getToken(GramaticaParser.DIGIT, i)

        def PAREN_CLOSE(self):
            return self.getToken(GramaticaParser.PAREN_CLOSE, 0)

        def getRuleIndex(self):
            return GramaticaParser.RULE_inm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInm" ):
                listener.enterInm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInm" ):
                listener.exitInm(self)




    def inm(self):

        localctx = GramaticaParser.InmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_inm)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GramaticaParser.PAREN_OPEN:
                self.state = 79
                self.match(GramaticaParser.PAREN_OPEN)


            self.state = 83 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 82
                self.match(GramaticaParser.DIGIT)
                self.state = 85 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==GramaticaParser.DIGIT):
                    break

            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GramaticaParser.PAREN_CLOSE:
                self.state = 87
                self.match(GramaticaParser.PAREN_CLOSE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





